<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    tools:context=".ViewModel.CadastroUsuario">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/idTitulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="sans-serif"
                android:text="Cadastro de Usuário"
                android:background="@drawable/borda_recycleview"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/idNome"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <EditText
                android:id="@+id/idNome"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="32dp"
                android:hint="Nome Completo"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idTitulo" />

            <EditText
                android:id="@+id/idCpf"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:hint="CPF"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idNome" />

            <TextView
                android:id="@+id/cpfError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idCpf" />

            <EditText
                android:id="@+id/idTelefone"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:hint="Telefone (00) 00000-0000"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cpfError" />

            <TextView
                android:id="@+id/telefoneError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idTelefone" />

            <EditText
                android:id="@+id/idEstado"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:hint="Estado"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/telefoneError" />

            <EditText
                android:id="@+id/idCidade"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:hint="Cidade"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idEstado" />

            <EditText
                android:id="@+id/idBairro"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:hint="Bairro"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idCidade" />

            <EditText
                android:id="@+id/idRua"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:hint="Rua"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idBairro" />

            <EditText
                android:id="@+id/idNumero"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:hint="Número"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idRua" />

            <EditText
                android:id="@+id/idCadEmail"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:hint="Email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idNumero" />

            <EditText
                android:id="@+id/idcadSenha"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:hint="Senha "
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idCadEmail" />

            <TextView
                android:id="@+id/senhaError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idcadSenha" />

            <EditText
                android:id="@+id/idConfSenha"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:hint="Confirme a Senha"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/senhaError" />

            <TextView
                android:id="@+id/confSenhaError"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idConfSenha" />

            <Button
                android:id="@+id/idCadastrar"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="60dp"
                android:backgroundTint="@color/Button"
                android:text="CADASTRAR"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/confSenhaError" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="16dp"
                android:text="* A senha deve conter no mínimo Oito(8) digitos."
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idConfSenha" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
